.svn/pristine/2b/2b43fef109dbcbca758ec481eb324a1706f9feef.svn-base
System.register([], function (_export, _context) {
  "use strict";

  return {
    setters: [],
    execute: function () {
      // This module is auto-generated to report error emitted when try to load module file:///G:/Work/cocoscreator/MiniGame/assets/script/game/gameGrid/view/GameGridStartView.ts at runtime.
      throw new Error(`SyntaxError: C:\CocosDashboard_2.0.1\file:\G:\Work\cocoscreator\MiniGame\assets\script\game\gameGrid\view\GameGridStartView.ts: Unexpected token ','. (418:56)

  416 |                 let item:MapGridItem = itemList[i];
  417 |                 let localPos:engine.Vector2 = this._randomGrid.transform2D.convertWorldPositionToLocal(item.getItemWorldPos());
> 418 |                 this._randomGrid.inverseTransformPoint(,item.getItemWorldPos())
      |                                                         ^
  419 |                 let grid:Node = this._gridList[i];//GameUI.FindChild(this._randomGrid,"grid" + (i+1));
  420 |                 TweenManager.addTween(grid).to({x:localPos.x,y:localPos.y},0.1).call(function(){
  421 |                     grid.active = false;`);
    }
  };
});
//# sourceMappingURL=da09a2474c2929d768ac9d61c71c2c8547024ad2.js.map